fix: navbar jumps

--- a/wiki/public/scss/contributions.scss
+++ b/wiki/public/scss/contributions.scss
@@ -54,7 +54,7 @@ thead td {
 
 .page-content-wrapper {
   padding: 0 !important;
-  margin: 0 0 1rem 0 !important;
+  margin: 6rem 0 1rem 0 !important;
 }
 
 .count {
